Test/6-16_cluster.clu
Cluster size 6
Cluster number 160106       # E:      Factor:7  P:  , Ori size:6    Sub:6    From:16          
   6    16    fam_6_1           1-108      1   leng: 107
   6    16    fam_6_2           1-108      1   leng: 107
   6    16    fam_6_3           1-108      1   leng: 107
   6    16    fam_6_4           1-108      1   leng: 107
   6    16    fam_6_5           1-108      1   leng: 107
   6    16    fam_6_6           1-108      1   leng: 107
